// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonGroup > should render aligned to the center 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

<div
  class="_base_fd5359 _center_fd5359"
>
  <button
    class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
  >
    <span
      class="_spinner_892426 circuit-0"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      Continue
    </span>
  </button>
  <button
    class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _secondary_fd5359"
  >
    <span
      class="_spinner_892426 circuit-0"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      Cancel
    </span>
  </button>
</div>
`;

exports[`ButtonGroup > should render aligned to the left 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

<div
  class="_base_fd5359 _left_fd5359"
>
  <button
    class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
  >
    <span
      class="_spinner_892426 circuit-0"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      Continue
    </span>
  </button>
  <button
    class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _secondary_fd5359"
  >
    <span
      class="_spinner_892426 circuit-0"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      Cancel
    </span>
  </button>
</div>
`;

exports[`ButtonGroup > should render aligned to the right 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

<div
  class="_base_fd5359 _right_fd5359"
>
  <button
    class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
  >
    <span
      class="_spinner_892426 circuit-0"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      Continue
    </span>
  </button>
  <button
    class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _secondary_fd5359"
  >
    <span
      class="_spinner_892426 circuit-0"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      Cancel
    </span>
  </button>
</div>
`;

exports[`ButtonGroup > should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

<div
  class="_base_fd5359 _center_fd5359"
>
  <button
    class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
  >
    <span
      class="_spinner_892426 circuit-0"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      Continue
    </span>
  </button>
  <button
    class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _secondary_fd5359"
  >
    <span
      class="_spinner_892426 circuit-0"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      Cancel
    </span>
  </button>
</div>
`;
